# adbus

./: .gitignore  INSTALL  Makefile.am  adbus.sln  configure.ac  libucdbus.pc.in  lua-debug.bat  lua-release.bat
adbus/: adbus.vcproj  auth.c  bind.c  bus.c  client-service.c  connection.c  connection.h  interface.c  interface.h  message.c  messages.c  misc.h  parse.c  proxy.c  rbuffer.c  server-dispatch.c  server-parse.c  server.c  server.h  sha1.h  state.c
adbuslua/: adbuslua_core.vcproj  internal.h  ladbus.c  lconnection.c  linterface.c  lmatch.c  lmessage.c  lsocket.c
adbusqt/: qdbusabstractadaptor.cpp  qdbusabstractadaptor_p.hxx  qdbusargument_p.hxx  qdbusconnection.cpp  qdbusconnection_p.hxx  qdbuserror_p.hxx  qdbusmessage_p.hxx  qdbusobject.cpp  qdbusobject_p.hxx
dmem/: istring.c  string.c
example/bus-epoll/: main.c
example/bus-qt/: Server.cpp  Server.hxx  main.cpp
example/bus-win/: Server.cpp  Server.h  bus-win.vcproj  main.cpp
example/client-qt/: Client.cpp  Client.hxx  main.cpp
example/lua/: call.lua  daemon.lua  launch-daemon.lua  lua.sh  proxy-method.lua  proxy-property.lua  proxy-signal.lua
example/ping/: client-async.c  client.c  server.c
example/simple/: Makefile.am  asignal.sh  main.c  quit.sh
include/c/: adbuslua.h  (+2 more)
src/: Makefile.am  auth.c  connection.c  connection.h  debug.c  dstring.c  interface.c  interface.h  istring.c  istring.h  match.c  message.c  message.h  messages.c  misc.c  misc.h  parse.c  proxy.c  rbuffer.c  reply.c  riterator.c  server-bus.c  server.h  signal.c  socket.c  state.c  string.c  string.h
test/: main.c
(+22 files in other folders)
