lib_LTLIBRARIES = libucdbus.la
libucdbus_la_SOURCES = 	auth.c			\
			bind.c			\
			bus.c			\
			client-service.c	\
			connection.c		\
			debug.c			\
			dstring.c		\
			interface.c		\
			istring.c		\
			match.c			\
			message.c		\
			messages.c		\
			misc.c			\
			parse.c			\
			proxy.c			\
			rbuffer.c		\
			reply.c			\
			riterator.c		\
			sha1.c			\
			signal.c		\
			socket.c		\
			state.c
libucdbus_la_LDFLAGS = -version-info 0:1:0
AM_CPPFLAGS=-I$(top_srcdir)/include/ucdbus
